--- a/casino/index.html
+++ b/casino/index.html
@@ -83,6 +83,7 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,syste
 .footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
 small.muted{color:#9a9a9a}
 </style>
+<link rel="stylesheet" href="../assets/glass-notice.css">
 </head>
 
 <body>
@@ -91,7 +92,7 @@ small.muted{color:#9a9a9a}
 </div>
 
 <div id="loader">
-  <div class="logoWrap"><img src="././img/logo.png" alt="88 로고 로딩"></div>
+  <div class="logoWrap"><img src="../img/logo.png" alt="88 로고 로딩"></div>
   <div class="text">Loading...</div>
 </div>
 
@@ -111,14 +112,14 @@ small.muted{color:#9a9a9a}
 <div class="header">
   <div class="nav">
     <a href="../">메인</a>
-    <a href="../analysis">분석기</a>
+    <a href="../analysis.html">분석기</a>
     <a href="../ipl/">입플/보너스</a>
     <a href="../minigame/">동행 미니게임</a>
     <a class="active" href="./">카지노</a>
     <a href="../slot/">슬롯</a>
   </div>
 
-  <a class="logoLink" href="././" aria-label="홈으로 이동">
+  <a class="logoLink" href="../" aria-label="홈으로 이동">
     <img class="logoImg" src="../img/logo.png" alt="88 커뮤니티 로고">
   </a>
   <div class="sub">
@@ -143,7 +144,7 @@ small.muted{color:#9a9a9a}
         <b>팁:</b> “페이백 %”보다 <b>정산 속도/제한 투명성</b>이 더 중요할 때가 많습니다.
       </div>
       <div class="btnRow">
-        <a class="btn blue" a href="/analysis/">분석기(마진/EV)</a>
+        <a class="btn blue" href="../analysis.html">분석기(마진/EV)</a>
         <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">문의(텔레그램)</a>
       </div>
     </div>
@@ -233,8 +234,6 @@ function rotateNotice(){
 rotateNotice();
 setInterval(rotateNotice,4200);
 </script>
+<script src="../assets/glass-notice.js" defer></script>
 </body>
 </html>
-
-
-
