--- a/minigame/index.html
+++ b/minigame/index.html
@@ -90,6 +90,7 @@ body{
 .footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
 small.muted{color:#9a9a9a}
 </style>
+<link rel="stylesheet" href="../assets/glass-notice.css">
 </head>
 
 <body>
@@ -250,5 +251,6 @@ function rotateNotice(){
 rotateNotice();
 setInterval(rotateNotice,4200);
 </script>
+<script src="../assets/glass-notice.js" defer></script>
 </body>
 </html>
