--- a/landing-d/index.html
+++ b/landing-d/index.html
@@ -215,6 +215,7 @@ a{color:inherit;text-decoration:none;}
 .smallLinks a:hover{color:var(--gold2); border-color:var(--gold2);}
 
 </style>
+<link rel="stylesheet" href="../assets/glass-notice.css">
 </head>
 <body>
   <div class="notice">
@@ -278,5 +279,6 @@ a{color:inherit;text-decoration:none;}
       </div>
     </div>
   </div>
+<script src="../assets/glass-notice.js" defer></script>
 </body>
 </html>
