--- a/slot/index.html
+++ b/slot/index.html
@@ -87,6 +87,7 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,syste
 .footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
 small.muted{color:#9a9a9a}
 </style>
+<link rel="stylesheet" href="../assets/glass-notice.css">
 </head>
 
 <body>
@@ -122,7 +123,7 @@ small.muted{color:#9a9a9a}
     <a class="active" href="./">슬롯</a>
   </div>
 
-  <a class="logoLink" href="././" aria-label="홈으로 이동">
+  <a class="logoLink" href="../" aria-label="홈으로 이동">
     <img class="logoImg" src="../img/logo.png" alt="88 커뮤니티 로고">
   </a>
   <div class="sub">
@@ -149,7 +150,7 @@ small.muted{color:#9a9a9a}
       </div>
 
       <div class="btnRow">
-        <a class="btn blue" a href="/analysis/">분석기(마진/EV)</a>
+        <a class="btn blue" href="../analysis.html">분석기(마진/EV)</a>
         <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">문의(텔레그램)</a>
       </div>
     </div>
@@ -240,6 +241,6 @@ function rotateNotice(){
 rotateNotice();
 setInterval(rotateNotice,4200);
 </script>
+<script src="../assets/glass-notice.js" defer></script>
 </body>
 </html>
-
