--- a/tool-ev/index.html
+++ b/tool-ev/index.html
@@ -81,8 +81,17 @@ footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-heigh
 .small{ font-size:12px; color:rgba(255,255,255,.55); }
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "손익분기점 승률은 왜 1/배당인가요?", "acceptedAnswer": {"@type": "Answer", "text": "배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정)."}}, {"@type": "Question", "name": "+EV이면 무조건 이기나요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다."}}, {"@type": "Question", "name": "추정 승률은 어떻게 잡나요?", "acceptedAnswer": {"@type": "Answer", "text": "최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다."}}, {"@type": "Question", "name": "마진(오버라운드)을 제거한 EV도 있나요?", "acceptedAnswer": {"@type": "Answer", "text": "가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다."}}, {"@type": "Question", "name": "추천 배팅 금액도 계산되나요?", "acceptedAnswer": {"@type": "Answer", "text": "현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다."}}]}</script>
+<link rel="stylesheet" href="../assets/glass-notice.css">
 </head>
 <body>
+<div class="glass-notice">
+  <a class="glass-notice__inner" href="https://t.me/UZU59" target="_blank" rel="noopener">
+    <span class="glass-notice__icon">🔔</span>
+    <span class="glass-notice__text">공식 문의는 @UZU59 단일 운영 (사칭 주의)</span>
+    <span class="glass-notice__chev">↗</span>
+  </a>
+</div>
+
   <div class="wrap">
     <div class="topbar">
       <div class="brand"><span class="badge">88</span> EV 계산기</div>
@@ -214,5 +223,6 @@ calc();
       <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
     </footer>
   </div>
+<script src="../assets/glass-notice.js" defer></script>
 </body>
 </html>
