--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ const CARD_DATA = {
     benefit:"고액전용 미겜 첫충 5% / 페이백 5% / 출석 30만원",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card3:{ title:"BETZY", code:"BANGU", link:"https://b88-et.com", telegram:"UZU59",
-    benefit:"스포츠 첫 10% / 미겜 첫 5% / 페이백 5%",
+    benefit:"고액전용 스포츠 첫 10% 미겜 첫 5% 페이백 5% USDT무기명가입 %",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card4:{ title:"VEGAS", code:"6789", link:"https://las403.com", telegram:"UZU59",
     benefit:"스포츠·미겜 입플 최대 30% / 카지노 입플",
