--- a/index.html
+++ b/index.html
@@ -848,13 +848,13 @@ const CARD_DATA = {
     benefit:"고액전용 스포츠 첫 10% 미겜 첫 5% 페이백 5% USDT무기명가입 %",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card4:{ title:"VEGAS", code:"6789", link:"https://las403.com", telegram:"UZU59",
-    benefit:"스포츠·미겜 입플 최대 30% / 카지노 입플",
+    benefit:"스포츠·고액전용 입플 최대 30% / 카지노 입플",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card5:{ title:"LULA BET", code:"ZZ99", link:"https://lula.ws", telegram:"PSC991",
     benefit:"원화·USDT 무기명가입 / 페이백 10%",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card6:{ title:"CHOY BET", code:"TAN", link:"https://cy-40.com", telegram:"DY0302",
-    benefit:"신규 30% / 매충 10% / 페이백 10%",
+    benefit:"신규 30% / 매충 10% / 페이백 10 / 입플 %",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
 
   card7:{ title:"광고/제휴 모집", code:"", link:"", telegram:"UZU59",
@@ -866,13 +866,13 @@ const CARD_DATA = {
     notice:"사칭 주의: 공식 관리자 @UZU59 단 하나" },
 
   card9:{ title:"RIO", code:"opop", link:"https://rio2.casino/?b=OPOP", telegram:"Aven47",
-    benefit:"카지노 입플/페이백 중심 · 고액 유저 기준 혜택 안내",
+    benefit:"고액전용 카지노 입플/페이백 중심 · 고액 유저 기준 혜택 안내",
     notice:"가입코드 미입력 시 혜택 적용이 어려울 수 있습니다." },
   card10:{ title:"RED HULK", code:"HERO", link:"https://rhk-777.com", telegram:"SDTR8",
-    benefit:"신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
+    benefit:"입금플러스 신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
    card11:{ title:"TOP GUN", code:"GAS7", link:"https://topgun-88.com", telegram:"SDTR8",
-    benefit:"신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
+    benefit:"입금플러스 신규 30% / 매충 10% / 페이백5% 콤프(1%/3%)%",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
 };
 
