--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@ const CARD_DATA = {
     benefit:"고액전용 스포츠 첫 10% 미겜 첫 5% 페이백 5% USDT무기명가입 %",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card4:{ title:"VEGAS", code:"6789", link:"https://las403.com", telegram:"UZU59",
-    benefit:"스포츠·고액전용 입플 최대 30% / 카지노 입플",
+    benefit:"스포츠·고액전용 입플 최대 30% 페이백 / 카지노 입플",
     notice:"가입코드 미입력 시 혜택 적용 불가" },
   card5:{ title:"LULA BET", code:"ZZ99", link:"https://lula.ws", telegram:"PSC991",
     benefit:"원화·USDT 무기명가입 / 페이백 10%",
