--- a/index.html
+++ b/index.html
@@ -1237,8 +1237,7 @@ function appendUtm(urlStr) {
 </div>
 
 <div class="vendor-header" id="vendorTop">
-  <h2>88 인증 놀이터</h2>
-  <p>  실제로 검증 된 놀이터 추천 드립니다.</p>
+  <h2>팔팔 인증 사이트 목록 </h2>
   <div class="pill-row" aria-label="빠른 이동">
     <a class="pill" href="/analysis/" data-cta="vendor_to_analysis">분석기 바로가기</a>
     <a class="pill" href="#vendorGrid" data-cta="vendor_to_grid">카드 바로보기</a>
