--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,10 @@ function appendUtm(urlStr) {
         <a class="small-btn" href="/tool-margin/" data-cta="quick_margin">마진</a>
         <a class="small-btn" href="/tool-ev/" data-cta="quick_ev">EV</a>
         <a class="small-btn" href="/tool-odds/" data-cta="quick_odds">배당 확률</a>
-        <a class="small-btn" href="/bonus-checklist/" data-cta="quick_bonus">입금플러스 체크리스트</a>
+        <a class="tool-card" href="/bonus-checklist/" data-cta="card_bonus">
+  <div class="tool-title">입플 체크리스트</div>
+  <div class="tool-desc">카지노 입플·슬롯 입플 조건을 빠르게 확인하는 체크리스트</div>
+</a>
       </div>
       <div class="note-mini">팁: 라인/배당 흐름은 “기록(로그)”이 쌓여야 의미가 커집니다. 다음 업데이트에서 베팅 로그/대시보드를 붙이면 재방문이 확 올라갑니다.</div>
     </div>
