--- a/index.html
+++ b/index.html
@@ -1335,26 +1335,8 @@ function appendUtm(urlStr) {
   </div>
 
 
-        <div class="chip-row" aria-hidden="true">
-          <span class="kchip">입플</span>
-          <span class="kchip">카지노</span>
-          <span class="kchip">슬롯</span>
-        </div>
-
-        <div class="tool-card-foot">
-          <span class="tool-card-cta">체크리스트 열기 →</span>
-          <span class="tool-card-note">조건 정리·문의 템플릿 포함</span>
-        </div>
-      </a>
-    </div>
-  </div>
-
-</div>
-
-
-
 <div class="vendor-tools"<div class="vendor-tools" aria-label="카드 검색 및 필터">
-  <input id="searchInput" class="v-input" placeholder="업체 검색 (예: CAPS, VEGAS, 페이백, USDT)" autocomplete="off">
+  <input id="searchInput" class="v-input" placeholder="업체 검색 (예: SPEED OK 어느날 )" autocomplete="off">
   <div class="v-controls" aria-label="필터 및 정렬">
     <div class="v-control">
       <label for="filterSelect">카테고리</label>
