--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@ function appendUtm(urlStr) {
     <div class="card stat-card" aria-label="오늘 많이 본 카드">
       <div class="stat-top">
         <div class="stat-title">오늘 많이 본 카드 TOP 5</div>
-        <div class="stat-meta" id="insightCardMeta">카드 상세를 열어본 횟수 기준입니다. (로컬 집계)</div>
+        <div class="stat-meta" id="insightCardMeta">카드 상세를 열어본 횟수 기준입니다. </div>
       </div>
       <div class="stat-list" id="insightCards"></div>
       <div class="note-mini">※ “인기순” 정렬은 카드 클릭 누적 기반, 이 영역은 “오늘 열람” 기반입니다.</div>
