--- a/analysis/index.html
+++ b/analysis/index.html
@@ -12,12 +12,27 @@
 <style>
 *{box-sizing:border-box}
 :root{
+  /* Theme (auto/preset) */
+  --accent1:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB:212,175,55;
+  --accentText:#000;
+  --accentOn:#00121a;
+
+  /* Glass intensity */
+  --glassA:.84;
+  --glassStrongA:.94;
+  --glassSoftA:.26;
+  --glassBorder:rgba(255,255,255,.06);
+
+  /* Backward-compat */
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
+
   --bg:#0b0b0b;
   --panel:#121212;
   --panel2:#0f0f0f;
-  --gold:#d4af37;
-  --gold2:#f5e27a;
-  --muted:#bdbdbd;
+--muted:#bdbdbd;
 
   --ok:#b7ffcf;
   --warn:#ffcf99;
@@ -29,7 +44,7 @@ body{
   margin:0;
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto;
   background:
-    radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
+    radial-gradient(1200px 500px at 50% -10%, rgba(var(--accentRGB),.14), transparent 55%),
     radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
     linear-gradient(180deg, #07070a, var(--bg));
   color:#fff;
@@ -190,7 +205,7 @@ body{
 .logo-img{
   display:block; margin:0 auto 6px;
   width:180px; max-width:72%; height:auto;
-  filter:drop-shadow(0 0 10px rgba(212,175,55,.25));
+  filter:drop-shadow(0 0 10px rgba(var(--accentRGB),.25));
 }
 @media(max-width:480px){ .logo-img{width:150px;max-width:82%} }
 .sub{ font-size:12px; color:#9a9a9a; }
@@ -292,7 +307,7 @@ body{
   border:1px solid rgba(255,255,255,.10);
   background:
     radial-gradient(600px 200px at 0% 0%, rgba(90,160,255,.10), transparent 55%),
-    radial-gradient(600px 200px at 100% 0%, rgba(212,175,55,.10), transparent 55%),
+    radial-gradient(600px 200px at 100% 0%, rgba(var(--accentRGB),.10), transparent 55%),
     rgba(255,255,255,.03);
   border-radius:18px;
   padding:14px;
@@ -355,8 +370,8 @@ body{
 .detailHead:before{
   content:"";
   width:8px; height:8px; border-radius:99px;
-  background:rgba(212,175,55,.9);
-  box-shadow:0 0 0 4px rgba(212,175,55,.12);
+  background:rgba(var(--accentRGB),.9);
+  box-shadow:0 0 0 4px rgba(var(--accentRGB),.12);
 }
 @media (max-width:520px){
   .heroStats{ grid-template-columns: 1fr; }
@@ -706,7 +721,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   margin-top:10px;
 }
 .quick-nav .chip{
-  border:1px solid rgba(212,175,55,.28);
+  border:1px solid rgba(var(--accentRGB),.28);
   background:rgba(255,255,255,.06);
   color:#fff;
   padding:8px 10px;
@@ -737,8 +752,8 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
 .mini-guide .head .pill{
   font-size:11px;
   font-weight:900;
-  background:rgba(212,175,55,.18);
-  border:1px solid rgba(212,175,55,.28);
+  background:rgba(var(--accentRGB),.18);
+  border:1px solid rgba(var(--accentRGB),.28);
   padding:6px 10px;
   border-radius:999px;
 }
@@ -1037,18 +1052,18 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
 
 /* ===== Settings spotlight (calcCard) ===== */
 #calcCard{
-  border:1px solid rgba(212,175,55,.24) !important;
+  border:1px solid rgba(var(--accentRGB),.24) !important;
   background:
-    radial-gradient(110% 160% at 12% 0%, rgba(212,175,55,.16), rgba(0,0,0,0) 55%),
+    radial-gradient(110% 160% at 12% 0%, rgba(var(--accentRGB),.16), rgba(0,0,0,0) 55%),
     linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.015));
-  box-shadow: 0 18px 45px rgba(0,0,0,.62), 0 0 0 1px rgba(212,175,55,.08) inset;
+  box-shadow: 0 18px 45px rgba(0,0,0,.62), 0 0 0 1px rgba(var(--accentRGB),.08) inset;
   position:relative;
   overflow:hidden;
 }
 #calcCard:before{
   content:"";
   position:absolute; inset:-2px;
-  background:linear-gradient(90deg, rgba(212,175,55,.30), rgba(255,255,255,0), rgba(212,175,55,.12));
+  background:linear-gradient(90deg, rgba(var(--accentRGB),.30), rgba(255,255,255,0), rgba(var(--accentRGB),.12));
   opacity:.25;
   pointer-events:none;
   transform:skewX(-14deg) translateX(-40%);
@@ -1063,9 +1078,9 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   font-weight:950;
   padding:6px 10px;
   border-radius:999px;
-  border:1px solid rgba(212,175,55,.30);
+  border:1px solid rgba(var(--accentRGB),.30);
   color:rgba(255,255,255,.92);
-  background:rgba(212,175,55,.10);
+  background:rgba(var(--accentRGB),.10);
   display:inline-flex;
   align-items:center;
   gap:6px;
@@ -1097,16 +1112,16 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   font-weight:950;
   color:#111;
   background:linear-gradient(135deg, var(--gold), var(--gold2));
-  box-shadow:0 8px 18px rgba(212,175,55,.18);
+  box-shadow:0 8px 18px rgba(var(--accentRGB),.18);
 }
 #calcCard .select{
-  border:1px solid rgba(212,175,55,.30) !important;
+  border:1px solid rgba(var(--accentRGB),.30) !important;
   background:linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.02)) !important;
   padding:14px 12px !important;
   font-weight:900 !important;
 }
 #calcCard .select:focus{
-  box-shadow:0 0 0 3px rgba(212,175,55,.18);
+  box-shadow:0 0 0 3px rgba(var(--accentRGB),.18);
 }
 #calcCard .settingsHint{
   margin-top:10px;
@@ -1123,8 +1138,8 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   border-top:1px solid rgba(255,255,255,.08);
 }
 @keyframes calcGlow{
-  0%,100%{ box-shadow: 0 18px 45px rgba(0,0,0,.62), 0 0 0 1px rgba(212,175,55,.08) inset; }
-  50%{ box-shadow: 0 22px 55px rgba(0,0,0,.68), 0 0 0 1px rgba(212,175,55,.14) inset, 0 0 26px rgba(212,175,55,.08); }
+  0%,100%{ box-shadow: 0 18px 45px rgba(0,0,0,.62), 0 0 0 1px rgba(var(--accentRGB),.08) inset; }
+  50%{ box-shadow: 0 22px 55px rgba(0,0,0,.68), 0 0 0 1px rgba(var(--accentRGB),.14) inset, 0 0 26px rgba(var(--accentRGB),.08); }
 }
 #calcCard{ animation:calcGlow 4.2s ease-in-out infinite; }
 @media (prefers-reduced-motion: reduce){
@@ -1132,7 +1147,25 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
   #calcCard:before{ display:none; }
 }
 
+
+
+/* 88 logo spotlight */
+.logoImg, .logo-img{
+  width:min(170px,52vw) !important;
+  height:auto;
+  display:block;
+  padding:10px;
+  border-radius:20px;
+  background:rgba(20,20,24,var(--glassSoftA));
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
+}
+@media(max-width:480px){
+  .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
+}
+
 </style>
+<script src="../assets/theme-preset.js" defer></script>
 </head>
 
 <body>
@@ -1184,7 +1217,7 @@ hr.sep{ border:none; height:1px; background:rgba(255,255,255,.06); margin:12px 0
 
 <div class="header">
   <a class="logo-link" href="/" aria-label="홈으로 이동">
-    <img src="../img/logo-88-community.png" alt="88 커뮤니티" class="logo-img">
+    <img src="/img/logo.png" alt="88 커뮤니티" class="logo-img logoImg">
   </a>
   <div class="sub">스포츠 배당 분석기 (완전체 · 통합 마진/EV/히스토리 · 판단 보조용)</div>
 </div>
@@ -2614,7 +2647,7 @@ function drawShareCard(){
   ctx.fillStyle = g; ctx.fillRect(0,0,W,H);
 
   // glow
-  ctx.fillStyle = "rgba(212,175,55,0.12)";
+  ctx.fillStyle = "rgba(var(--accentRGB),0.12)";
   ctx.beginPath(); ctx.arc(W*0.60, H*0.15, 330, 0, Math.PI*2); ctx.fill();
   ctx.fillStyle = "rgba(90,160,255,0.08)";
   ctx.beginPath(); ctx.arc(W*0.18, H*0.25, 260, 0, Math.PI*2); ctx.fill();
@@ -2646,9 +2679,9 @@ function drawShareCard(){
   }catch(e){}
   if(badgeText){
     const bx = pad+40, by = pad+170, bw = 340, bh = 54;
-    ctx.fillStyle = "rgba(212,175,55,0.18)";
+    ctx.fillStyle = "rgba(var(--accentRGB),0.18)";
     roundRect(ctx, bx, by, bw, bh, 999, true, false);
-    ctx.strokeStyle = "rgba(212,175,55,0.35)";
+    ctx.strokeStyle = "rgba(var(--accentRGB),0.35)";
     ctx.lineWidth = 2;
     roundRect(ctx, bx, by, bw, bh, 999, false, true);
     ctx.fillStyle = "#fff";
