--- a/ipl/index.html
+++ b/ipl/index.html
@@ -20,12 +20,27 @@
 <style>
 *{box-sizing:border-box}
 :root{
+  /* Theme (auto/preset) */
+  --accent1:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB:212,175,55;
+  --accentText:#000;
+  --accentOn:#00121a;
+
+  /* Glass intensity */
+  --glassA:.84;
+  --glassStrongA:.94;
+  --glassSoftA:.26;
+  --glassBorder:rgba(255,255,255,.06);
+
+  /* Backward-compat */
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
+
   --bg:#0b0b0b;
-  --panel:rgba(18,18,18,.88);
+  --panel:rgba(18,18,18,var(--glassA));
   --bd:rgba(255,255,255,.08);
-  --gold:#d4af37;
-  --gold2:#f5e27a;
-  --muted:#cfcfcf;
+--muted:#cfcfcf;
   --ok:#b7ffcf;
   --bad:#ffb3b3;
 }
@@ -34,7 +49,7 @@ body{
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
   color:#fff;
   background:
-    radial-gradient(1200px 500px at 50% -10%, rgba(212,175,55,.14), transparent 55%),
+    radial-gradient(1200px 500px at 50% -10%, rgba(var(--accentRGB),.14), transparent 55%),
     radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
     linear-gradient(180deg, #07070a, var(--bg));
 }
@@ -49,12 +64,12 @@ body{
 #loader{
   position:fixed; inset:0; z-index:2000;
   background:
-    radial-gradient(900px 500px at 50% 30%, rgba(212,175,55,.18), transparent 55%),
+    radial-gradient(900px 500px at 50% 30%, rgba(var(--accentRGB),.18), transparent 55%),
     linear-gradient(180deg,#07070a,#0b0b0b);
   display:flex; align-items:center; justify-content:center; flex-direction:column; gap:14px;
 }
 #loader .logoWrap{width:min(220px,60vw); aspect-ratio:1/1; display:flex; align-items:center; justify-content:center;
-  filter: drop-shadow(0 0 24px rgba(212,175,55,.22));
+  filter: drop-shadow(0 0 24px rgba(var(--accentRGB),.22));
 }
 #loader img{width:100%;height:100%;object-fit:contain; animation:pulse 1.4s ease-in-out infinite;}
 #loader .text{font-weight:900; letter-spacing:.6px; color:#e9e9e9; opacity:.85; font-size:13px;}
@@ -99,8 +114,8 @@ body{
 .logoImg{
   width:min(220px,62vw);
   height:auto; display:block; padding:10px; border-radius:18px;
-  background:radial-gradient(120px 60px at 50% 40%, rgba(212,175,55,.15), transparent 70%);
-  filter: drop-shadow(0 0 10px rgba(212,175,55,.25)) drop-shadow(0 0 24px rgba(212,175,55,.12));
+  background:radial-gradient(120px 60px at 50% 40%, rgba(var(--accentRGB),.15), transparent 70%);
+  filter: drop-shadow(0 0 10px rgba(var(--accentRGB),.25)) drop-shadow(0 0 24px rgba(var(--accentRGB),.12));
 }
 .sub{ font-size:12px; color:#9a9a9a; margin-top:6px; padding:0 14px; line-height:1.5; }
 
@@ -175,7 +190,25 @@ input{
   outline:none;
   font-weight:800;
 }
+
+
+/* 88 logo spotlight */
+.logoImg, .logo-img{
+  width:min(170px,52vw) !important;
+  height:auto;
+  display:block;
+  padding:10px;
+  border-radius:20px;
+  background:rgba(20,20,24,var(--glassSoftA));
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
+}
+@media(max-width:480px){
+  .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
+}
+
 </style>
+<script src="../assets/theme-preset.js" defer></script>
 </head>
 
 <body>
@@ -186,7 +219,7 @@ input{
 </div>
 
 <div id="loader">
-  <div class="logoWrap"><img src="../img/logo.png" alt="88 로고 로딩"></div>
+  <div class="logoWrap"><img class="logoImg" src="/img/logo.png" alt="88 로고 로딩"></div>
   <div class="text">Loading...</div>
 </div>
 
@@ -214,7 +247,7 @@ input{
   </div>
 
   <a class="logoLink" href="../" aria-label="홈으로 이동">
-    <img class="logoImg" src="../img/logo.png" alt="88 커뮤니티 로고">
+    <img class="logoImg" src="/img/logo.png" alt="88 커뮤니티 로고">
   </a>
   <div class="sub">
     <b>입금플러스(입플)·보너스·페이백</b> 조건/주의사항을 “고액 유저 기준”으로 정리했습니다.<br>
