--- a/tool-ev/index.html
+++ b/tool-ev/index.html
@@ -14,16 +14,31 @@
 <meta property="og:url" content="https://88st.cloud/tool-ev/">
 <style>
 :root{
+  /* Theme (auto/preset) */
+  --accent1:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB:212,175,55;
+  --accentText:#000;
+  --accentOn:#00121a;
+
+  /* Glass intensity */
+  --glassA:.84;
+  --glassStrongA:.94;
+  --glassSoftA:.26;
+  --glassBorder:rgba(255,255,255,.06);
+
+  /* Backward-compat */
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
+
   --bg:#0b0b0f;
   --panel:rgba(255,255,255,.05);
   --border:rgba(255,255,255,.10);
   --text:rgba(255,255,255,.90);
   --muted:rgba(255,255,255,.62);
-  --gold:#d4af37;
-  --gold2:#ffcc52;
 }
 *{ box-sizing:border-box; }
-html,body{ margin:0; padding:0; background: radial-gradient(900px 420px at 50% 0%, rgba(212,175,55,.12), transparent 60%), var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, Malgun Gothic, sans-serif; }
+html,body{ margin:0; padding:0; background: radial-gradient(900px 420px at 50% 0%, rgba(var(--accentRGB),.12), transparent 60%), var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, Malgun Gothic, sans-serif; }
 a{ color:inherit; text-decoration:none; }
 .wrap{ max-width:980px; margin:0 auto; padding:18px 14px 42px; }
 .topbar{ display:flex; gap:10px; align-items:center; justify-content:space-between; padding:10px 0 6px; }
@@ -79,8 +94,26 @@ input, select{
 .faq summary::-webkit-details-marker{ display:none; }
 footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-height:1.6; }
 .small{ font-size:12px; color:rgba(255,255,255,.55); }
+
+
+/* 88 logo spotlight */
+.logoImg, .logo-img{
+  width:min(170px,52vw) !important;
+  height:auto;
+  display:block;
+  padding:10px;
+  border-radius:20px;
+  background:rgba(20,20,24,var(--glassSoftA));
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
+}
+@media(max-width:480px){
+  .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
+}
+
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "손익분기점 승률은 왜 1/배당인가요?", "acceptedAnswer": {"@type": "Answer", "text": "배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정)."}}, {"@type": "Question", "name": "+EV이면 무조건 이기나요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다."}}, {"@type": "Question", "name": "추정 승률은 어떻게 잡나요?", "acceptedAnswer": {"@type": "Answer", "text": "최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다."}}, {"@type": "Question", "name": "마진(오버라운드)을 제거한 EV도 있나요?", "acceptedAnswer": {"@type": "Answer", "text": "가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다."}}, {"@type": "Question", "name": "추천 배팅 금액도 계산되나요?", "acceptedAnswer": {"@type": "Answer", "text": "현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다."}}]}</script>
+<script src="../assets/theme-preset.js" defer></script>
 </head>
 <body>
   <div class="wrap">
