--- a/tool-margin/index.html
+++ b/tool-margin/index.html
@@ -14,16 +14,31 @@
 <meta property="og:url" content="https://88st.cloud/tool-margin/">
 <style>
 :root{
+  /* Theme (auto/preset) */
+  --accent1:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB:212,175,55;
+  --accentText:#000;
+  --accentOn:#00121a;
+
+  /* Glass intensity */
+  --glassA:.84;
+  --glassStrongA:.94;
+  --glassSoftA:.26;
+  --glassBorder:rgba(255,255,255,.06);
+
+  /* Backward-compat */
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
+
   --bg:#0b0b0f;
   --panel:rgba(255,255,255,.05);
   --border:rgba(255,255,255,.10);
   --text:rgba(255,255,255,.90);
   --muted:rgba(255,255,255,.62);
-  --gold:#d4af37;
-  --gold2:#ffcc52;
 }
 *{ box-sizing:border-box; }
-html,body{ margin:0; padding:0; background: radial-gradient(900px 420px at 50% 0%, rgba(212,175,55,.12), transparent 60%), var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, Malgun Gothic, sans-serif; }
+html,body{ margin:0; padding:0; background: radial-gradient(900px 420px at 50% 0%, rgba(var(--accentRGB),.12), transparent 60%), var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, Malgun Gothic, sans-serif; }
 a{ color:inherit; text-decoration:none; }
 .wrap{ max-width:980px; margin:0 auto; padding:18px 14px 42px; }
 .topbar{ display:flex; gap:10px; align-items:center; justify-content:space-between; padding:10px 0 6px; }
@@ -79,8 +94,26 @@ input, select{
 .faq summary::-webkit-details-marker{ display:none; }
 footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-height:1.6; }
 .small{ font-size:12px; color:rgba(255,255,255,.55); }
+
+
+/* 88 logo spotlight */
+.logoImg, .logo-img{
+  width:min(170px,52vw) !important;
+  height:auto;
+  display:block;
+  padding:10px;
+  border-radius:20px;
+  background:rgba(20,20,24,var(--glassSoftA));
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
+}
+@media(max-width:480px){
+  .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
+}
+
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "오버라운드(마진)가 몇 %면 높은 편인가요?", "acceptedAnswer": {"@type": "Answer", "text": "종목/리그/시장에 따라 다르지만, 일반적으로 마진이 낮을수록 유리합니다. 같은 조건이면 2~4%대가 6~10%대보다 장기 기대값이 좋습니다."}}, {"@type": "Question", "name": "공정확률/공정배당은 무엇인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시확률을 100%로 정규화해 마진을 제거한 값입니다. ‘마진이 없는 시장’이라고 가정한 공정 기준으로 비교할 때 사용합니다."}}, {"@type": "Question", "name": "2-way와 3-way는 언제 쓰나요?", "acceptedAnswer": {"@type": "Answer", "text": "승/패만 있는 시장은 2-way, 승/무/패가 있는 시장은 3-way로 계산합니다."}}, {"@type": "Question", "name": "마진이 낮으면 무조건 좋은 배팅인가요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. 마진은 ‘수수료’에 가깝고, 실제 수익 여부는 추정 승률(엣지)과 배당의 균형(EV)에 달려 있습니다."}}, {"@type": "Question", "name": "이 계산기는 정답인가요?", "acceptedAnswer": {"@type": "Answer", "text": "계산 자체는 산술이지만, 실제 결과는 변동성이 큽니다. 참고용으로만 활용해 주세요."}}]}</script>
+<script src="../assets/theme-preset.js" defer></script>
 </head>
 <body>
   <div class="wrap">
