--- a/tool-odds/index.html
+++ b/tool-odds/index.html
@@ -14,16 +14,31 @@
 <meta property="og:url" content="https://88st.cloud/tool-odds/">
 <style>
 :root{
+  /* Theme (auto/preset) */
+  --accent1:#d4af37;
+  --accent2:#f5e27a;
+  --accentRGB:212,175,55;
+  --accentText:#000;
+  --accentOn:#00121a;
+
+  /* Glass intensity */
+  --glassA:.84;
+  --glassStrongA:.94;
+  --glassSoftA:.26;
+  --glassBorder:rgba(255,255,255,.06);
+
+  /* Backward-compat */
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
+
   --bg:#0b0b0f;
   --panel:rgba(255,255,255,.05);
   --border:rgba(255,255,255,.10);
   --text:rgba(255,255,255,.90);
   --muted:rgba(255,255,255,.62);
-  --gold:#d4af37;
-  --gold2:#ffcc52;
 }
 *{ box-sizing:border-box; }
-html,body{ margin:0; padding:0; background: radial-gradient(900px 420px at 50% 0%, rgba(212,175,55,.12), transparent 60%), var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, Malgun Gothic, sans-serif; }
+html,body{ margin:0; padding:0; background: radial-gradient(900px 420px at 50% 0%, rgba(var(--accentRGB),.12), transparent 60%), var(--bg); color:var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Apple SD Gothic Neo, Malgun Gothic, sans-serif; }
 a{ color:inherit; text-decoration:none; }
 .wrap{ max-width:980px; margin:0 auto; padding:18px 14px 42px; }
 .topbar{ display:flex; gap:10px; align-items:center; justify-content:space-between; padding:10px 0 6px; }
@@ -79,8 +94,26 @@ input, select{
 .faq summary::-webkit-details-marker{ display:none; }
 footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-height:1.6; }
 .small{ font-size:12px; color:rgba(255,255,255,.55); }
+
+
+/* 88 logo spotlight */
+.logoImg, .logo-img{
+  width:min(170px,52vw) !important;
+  height:auto;
+  display:block;
+  padding:10px;
+  border-radius:20px;
+  background:rgba(20,20,24,var(--glassSoftA));
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow:0 0 0 1px rgba(255,255,255,.06), 0 14px 40px rgba(0,0,0,.42), 0 0 26px rgba(var(--accentRGB), .22);
+}
+@media(max-width:480px){
+  .logoImg, .logo-img{ width:min(150px,72vw) !important; padding:9px; }
+}
+
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "배당 2.00은 확률로 얼마인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시 확률은 1/2.00 = 50% 입니다(단일 결과 기준)."}}, {"@type": "Question", "name": "확률 60%면 공정 배당은?", "acceptedAnswer": {"@type": "Answer", "text": "공정 배당은 1/0.60 = 1.667 입니다(마진 없는 단순 계산)."}}, {"@type": "Question", "name": "여러 결과(승/무/패)는 어떻게 하나요?", "acceptedAnswer": {"@type": "Answer", "text": "각 결과 배당을 모두 넣고 마진 계산기에서 오버라운드를 구한 뒤, 공정확률/공정배당을 확인하는 방식이 정확합니다."}}, {"@type": "Question", "name": "마진이 있으면 확률 변환이 왜 달라지나요?", "acceptedAnswer": {"@type": "Answer", "text": "북메이커는 각 결과에 수수료를 포함시키기 때문에(오버라운드), 단순 1/배당의 합이 100%를 넘을 수 있습니다."}}, {"@type": "Question", "name": "이 변환은 언제 쓰면 좋나요?", "acceptedAnswer": {"@type": "Answer", "text": "손익분기점 계산, EV 계산의 기본 입력값 확인, 배당 비교(가치 판단)에 유용합니다."}}]}</script>
+<script src="../assets/theme-preset.js" defer></script>
 </head>
 <body>
   <div class="wrap">
